fix: assets not showing, moved to public

--- a/assets/css/card-Container.css
+++ b/assets/css/card-Container.css
@@ -18,6 +18,11 @@
 .header-container {
 	display: flex;
 }
+.avatar {
+	width: 80px;
+	aspect-ratio: 1/1;
+	border-radius: 100%;
+}
 
 #follower-container {
 	display: flex;
